@@ -1,6 +1,7 @@
 ## Redis Master
 daemonize yes
 pidfile /tmp/redis.pid
+bind 127.0.0.1
 port 6379
 requirepass yourpassword
 timeout 5
@@ -13,7 +14,7 @@ dbfilename dump.rdb
 dir /usr/local/redis/data
 
 maxclients 65535
-maxmemory 1gb
+maxmemory 1073741824
 maxmemory-policy volatile-lru
 
 appendonly no
