@@ -2,6 +2,7 @@
 
 daemonize yes
 pidfile /tmp/redis.pid
+bind 127.0.0.1
 port 6379
 masterauth yourpassword
 timeout 5 
@@ -17,7 +18,7 @@ dbfilename dump.rdb
 dir /usr/local/redis/data 
 
 maxclients 65535
-maxmemory 1gb 
+maxmemory 1073741824
 maxmemory-policy volatile-lru
 
 appendonly yes
