@@ -8,7 +8,7 @@
 #exec 2>${TOP_DIR}/stderr.log
 
 # Version
-readonly VER='2.0.0'
+readonly VER='2.0.1-dev'
 if [ $1 = '-v' ] 2>/dev/null;then
     echo Moss-${VER}
     exit 0
